crates/secretenv-core/tests/ui/public_api/default_cli_api.rs
use secretenv_core::cli_api;

fn main() {
    let _ = cli_api::app;
}
